--- a/webhid_connector_separated.html
+++ b/webhid_connector_separated.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NXP USB ISP Programming Tool</title>
+  <title>WebFlash - USB ISP Programming Tool</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -210,11 +210,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>🔧 NXP USB ISP Programming Tool</h1>
+    <h1>🔧 WebFlash - USB ISP Programming Tool</h1>
     
 
     <div class="button-group">
-      <button id="connectBtn">🔌 Connect NXP Device</button>
+      <button id="connectBtn">🔌 Connect ARM Device</button>
       <button id="fullDiagnosticBtn">🔍 Full Device Diagnostic</button>
       <button id="eraseFlashBtn" class="danger-btn">🗑️ Erase Flash</button>
       <button id="writeFlashBtn" class="primary-btn">🚀 Start Programming</button>
@@ -250,7 +250,7 @@
     <div class="content-area">
       <div class="status-panel">
         <h3>📊 Device Status & Properties</h3>
-        <div id="statusDisplay">Auto-connecting to LPC55S28 device...</div>
+        <div id="statusDisplay">Auto-connecting to ARM MCU device...</div>
       </div>
 
       <div class="log-panel">
